add animations, gif backgrounds, and test different card/background images:

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <td>
             <div class="card" id="about"><a href="">
                 <div class="content">
+                  <div class="video"></div>
                   <h3 class="animated fadeIn">about</h3>
                 </div></a></div>
           </td>
