update to use flexbox

--- a/index.html
+++ b/index.html
@@ -9,37 +9,23 @@
   </head>
   <body>
     <div class="body-container">
-      <table>
-        <tr>
-          <td>
-            <div class="card" id="about"><a href="">
-                <div class="content">
-                  <div class="video"></div>
-                  <h3 class="animated fadeIn">about</h3>
-                </div></a></div>
-          </td>
-          <td>
-            <div class="card" id="portfolio"><a href="">
-                <div class="content">
-                  <h3 class="animated fadeIn">portfolio</h3>
-                </div></a></div>
-          </td>
-        </tr>
-        <tr> 
-          <td>
-            <div class="card" id="gallery"><a href="">
-                <div class="content">
-                  <h3 class="animated fadeIn">gallery</h3>
-                </div></a></div>
-          </td>
-          <td>
-            <div class="card" id="contact"><a href="">
-                <div class="content">
-                  <h3 class="animated fadeIn">contact</h3>
-                </div></a></div>
-          </td>
-        </tr>
-      </table>
+      <div class="card" id="about"><a href="">
+          <div class="content">
+            <div class="video"></div>
+            <h3 class="animated fadeIn">About</h3>
+          </div></a></div>
+      <div class="card" id="portfolio"><a href="">
+          <div class="content">
+            <h3 class="animated fadeIn">Portfolio</h3>
+          </div></a></div>
+      <div class="card" id="gallery"><a href="">
+          <div class="content">
+            <h3 class="animated fadeIn">Gallery</h3>
+          </div></a></div>
+      <div class="card" id="contact"><a href="">
+          <div class="content">
+            <h3 class="animated fadeIn">Contact</h3>
+          </div></a></div>
     </div>
     <script src="assets/js/app.js"></script>
   </body>
