style contact form with x button, fading in and out

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="body-container">
-      <div class="contact-form">
+      <div class="contact-form"><span>x</span>
         <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
           <input type="text" name="name" placeholder="Name">
           <input type="email" name="_replyto" placeholder="Email">
