update animation to remain after hovering

--- a/index.html
+++ b/index.html
@@ -23,25 +23,27 @@
       <h1>Emily Hansel</h1>
       <h4>Dancer | Choreographer</h4>
       <ul class="menu">
-        <li class="menu-item"> <span>about</span>
+        <div class="menu-item"> <span class="menu-button">about</span>
           <ul class="sub-menu">
             <li> <a class="site-link" href="/bio" alt="bio">bio</a></li>
             <li> <a class="site-link" href="assets/resume.pdf" alt="resume">resume</a></li>
           </ul>
-        </li>
-        <li class="menu-item"> <span>works</span>
+        </div>
+        <div class="menu-item"> <span class="menu-button">works</span>
           <ul class="sub-menu"> 
             <li> <a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
             <li> <a class="site-link" href="/statement" alt="artist statement">artist statement          </a></li>
           </ul>
-        </li>
-        <li class="menu-item"> <span> media</span>
+        </div>
+        <div class="menu-item"> <span class="menu-button"> media</span>
           <ul class="sub-menu"> 
             <li> <a class="site-link" href="/video" alt="video">video</a></li>
             <li> <a class="site-link" href="photo" alt="photo">photo</a></li>
           </ul>
-        </li>
-        <li class="menu-item"> <a class="site-link" id="contact" href="" alt="contact">contact</a></li>
+        </div>
+        <div class="menu-item"> 
+          <div class="site-link" id="contact">contact</div>
+        </div>
       </ul>
     </div>
     <script src="assets/js/jquery.js"></script>
