update animation to use emily's images

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           <input tabindex="4" type="submit" value="Send">
         </form>
       </div>
-      <h1>Emily Hansel</h1>
-      <h4>Dancer | Choreographer</h4>
+      <h1><a href="" alt="Emily Hansel">Emily Hansel</a></h1>
+      <h4>Dancer </h4>
+      <h4>Choreographer</h4>
       <ul class="menu">
         <div class="menu-item"> <span class="menu-button">about</span>
           <ul class="sub-menu">
@@ -43,6 +44,7 @@
           </ul>
         </div>
         <div class="menu-item"> <span class="menu-button" id="contact">contact</span></div>
+        <div class="dancing-image dance"></div>
       </ul>
     </div>
     <script src="assets/js/jquery.js"></script>
