--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/index.css">
-    <title>Emily Hansel | Portfolio</title>
+    <title>Emily Hansel</title>
   </head>
   <body>
+    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="mobile-nav">
+      <div class="nav-items">
+        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
+        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement </a></div>
+        <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
+        <div class="nav-item">
+          <p class="contact">contact</p>
+        </div>
+      </div>
+    </div>
     <div class="body-container">
       <div class="contact-form"><span>x</span>
         <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
@@ -22,13 +35,13 @@
         </form>
       </div>
       <h1><a href="" alt="Emily Hansel">Emily Hansel</a></h1>
-      <h4>Dancer </h4>
+      <h4>Dancer</h4>
       <h4>Choreographer</h4>
       <ul class="menu">
         <div class="menu-item"> <span class="menu-button">about</span>
           <ul class="sub-menu">
             <li> <a class="site-link" href="/bio" alt="bio">bio</a></li>
-            <li> <a class="site-link" href="assets/resume.pdf" alt="resume">resume</a></li>
+            <li> <a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></li>
           </ul>
         </div>
         <div class="menu-item"> <span class="menu-button">works</span>
@@ -39,14 +52,15 @@
         </div>
         <div class="menu-item"> <span class="menu-button"> media</span>
           <ul class="sub-menu"> 
-            <li> <a class="site-link" href="/video" alt="video">video</a></li>
-            <li> <a class="site-link" href="photo" alt="photo">photo</a></li>
+            <li> <a class="site-link" href="/media" alt="video">video</a></li>
+            <li> <a class="site-link" href="/media" alt="photo">photo</a></li>
           </ul>
         </div>
-        <div class="menu-item"> <span class="menu-button" id="contact">contact</span></div>
-        <div class="dancing-image dance"></div>
+        <div class="menu-item"> <span class="menu-button contact">contact</span></div>
+        <div class="dancing-image"></div>
       </ul>
-    </div>
+    </div><img class="leftImage" src="assets/img/dancing/5.png">
+    <div class="load-images"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"><img src="assets/img/dancing/12.png"><img src="assets/img/dancing/13.png"></div>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
