complete animation and mobile nav bar. Yet to be tested on mobile

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement </a></div>
         <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
-        <div class="nav-item">
-          <p class="contact">contact</p>
-        </div>
+        <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
     <div class="body-container">
@@ -59,7 +57,7 @@
         <div class="menu-item"> <span class="menu-button contact">contact</span></div>
         <div class="dancing-image"></div>
       </ul>
-    </div><img class="leftImage" src="assets/img/dancing/5.png">
+    </div>
     <div class="load-images"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"><img src="assets/img/dancing/12.png"><img src="assets/img/dancing/13.png"></div>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/app.js"></script>
