make /videos use a carousel too

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         <div class="menu-item"> <span class="menu-button"> media</span>
           <ul class="sub-menu"> 
-            <li> <a class="site-link" href="/media#video" alt="video">video</a></li>
-            <li> <a class="site-link" href="/media#photo" alt="photo">photo</a></li>
+            <li> <a class="site-link" href="/video" alt="video">video</a></li>
+            <li> <a class="site-link" href="/photo" alt="photo">photo</a></li>
           </ul>
         </div>
         <div class="menu-item"> <span class="menu-button contact">contact</span></div>
