--- a/video/index.html
+++ b/video/index.html
@@ -34,9 +34,22 @@
     </div>
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/2.png"></a></div>
-      <h3 id="photo">Photo</h3>
-      <div class="media-container photo-container">
-        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="1" height="200px"><img src="../assets/img/dancing/carousel/2.png" data-caption="2" height="200px"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="3" height="200px"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="4" height="200px"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="5" height="200px"><img src="../assets/img/dancing/carousel/6.png" data-caption="6" height="200px"><img src="../assets/img/dancing/carousel/7.png" data-caption="7" height="200px"><img src="../assets/img/dancing/carousel/8.png" data-caption="8" height="200px"><img src="../assets/img/dancing/carousel/9.png" data-caption="9" height="200px"><img src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px"><img src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px"><img src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px"><img src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px"><img src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px"><img src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px"></div>
+      <h3 id="photo">Video</h3>
+      <div class="media-container video-container">
+        <div class="carousel">
+          <div class="card">
+            <iframe src="https://player.vimeo.com/video/151188661?title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+          <div class="card">
+            <iframe src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card">
+            <iframe src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card">
+            <iframe src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
         <div class="caption"></div>
       </div>
     </div>
