update so reload main causes animation reload, but not when you return to main

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </ul>
         </div>
         <div class="menu-item"> <span class="menu-button contact">contact</span></div>
-        <div class="dancing-image dance"></div>
+        <div class="dancing-image"></div>
       </ul>
     </div>
     <div class="load-images"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div>
