--- a/video/index.html
+++ b/video/index.html
@@ -56,5 +56,6 @@
     <script src="../assets/js/jquery.js"></script>
     <script src="../assets/js/jquery.mousewheel.min.js"></script>
     <script src="../assets/js/carousel.js"></script>
+    <script>sessionStorage.seen = true;</script>
   </body>
 </html>
