--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -20,7 +20,7 @@
     </div>
     <div class="contact-form"><span>x</span>
       <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below or contact me at <a href="mailto:emilylhansel@gmail.com">emilylhansel@gmail.com</a></p>
+        <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
         <input type="hidden" name="_next" value="#submitted">
