--- a/choreography/index.html
+++ b/choreography/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
     <title>Emily Hansel | Choreography</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/index.css">
   </head>
   <body>
@@ -32,8 +32,8 @@
         <input tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
-    <div class="body-container choreo">
+    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
+    <div class="choreo">
       <div class="choreo-container">
         <h3>Choreography</h3>
         <div class="choreo-box">
@@ -113,9 +113,9 @@
           <div class="copy">
             <h4>Scream (2014)</h4>
             <p>
-              <b>Choreographed</b> by Emily Hansel.<br>
+              <b>Choreographed</b> by Emily Hansel.<br/>
               <b>Performed</b> by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
-              <b>Music</b> by Philip Glass and Yo-Yo Ma.<br>
+              <b>Music</b> by Philip Glass and Yo-Yo Ma.<br/>
             </p>
             <p>Inspired by Edvard Munch's "The Scream."</p>
           </div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream">
