--- a/media/index.html
+++ b/media/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
     <title>Emily Hansel | Media</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/index.css">
   </head>
   <body>
