--- a/video/index.html
+++ b/video/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
     <title>Emily Hansel | Media</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
@@ -33,7 +35,7 @@
       </form>
     </div>
     <div class="media">
-      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/2.png"></a></div>
+      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div>
       <h3 id="photo">Video</h3>
       <div class="media-container video-container">
         <div class="carousel">
