add click buttons to carousel

--- a/video/index.html
+++ b/video/index.html
@@ -38,6 +38,8 @@
       <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div>
       <h3 id="photo">Video</h3>
       <div class="media-container video-container">
+        <div class="prev">&lt;</div>
+        <div class="next">&gt;</div>
         <div class="carousel">
           <div class="card">
             <iframe src="https://player.vimeo.com/video/151188661?title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
