--- a/photo/index.html
+++ b/photo/index.html
@@ -35,7 +35,9 @@
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/4.png"></a></div>
       <h3 id="photo">Photo</h3>
-      <div class="media-container photo-container">
+      <div class="media-container photo-container">       
+        <div class="prev">&lt;</div>
+        <div class="next">&gt;</div>
         <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="1" height="200px"><img src="../assets/img/dancing/carousel/2.png" data-caption="2" height="200px"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="3" height="200px"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="4" height="200px"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="5" height="200px"><img src="../assets/img/dancing/carousel/6.png" data-caption="6" height="200px"><img src="../assets/img/dancing/carousel/7.png" data-caption="7" height="200px"><img src="../assets/img/dancing/carousel/8.png" data-caption="8" height="200px"><img src="../assets/img/dancing/carousel/9.png" data-caption="9" height="200px"><img src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px"><img src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px"><img src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px"><img src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px"><img src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px"><img src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px"></div>
         <div class="caption"></div>
       </div>
