--- a/choreography/index.html
+++ b/choreography/index.html
@@ -34,6 +34,7 @@
     </div>
     <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
     <div class="choreo">
+      <div class="rightImage"><img src="../assets/img/dancing/carousel/7.png"></div>
       <div class="choreo-container">
         <h3>Choreography</h3>
         <div class="choreo-box">
