update /choreo /bio /statement to be pretty mobile, and fix contat form nav icon bug

--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -16,7 +16,8 @@
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
@@ -30,5 +31,7 @@
         <input tabindex="4" type="submit" value="Send">
       </form>
     </div>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
