--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
@@ -60,7 +61,8 @@
       </ul>
     </div>
     <div class="load-images"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div>
-    <script src="./assets/js/jquery.js"></script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
