--- a/video/index.html
+++ b/video/index.html
@@ -20,7 +20,8 @@
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
@@ -57,6 +58,8 @@
         <div class="caption"></div>
       </div>
     </div>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
     <script src="../assets/js/jquery.js"></script>
     <script src="../assets/js/jquery.mousewheel.min.js"></script>
     <script src="../assets/js/carousel.js"></script>
