update to all changes Emily asked for. Need to add zoom functionality

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -28,36 +28,59 @@
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <input type="hidden" name="_next" value="#submitted">
         <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input tabindex="4" type="submit" value="Send">
+        <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
     <div class="choreo">
-      <div class="rightImage"><img src="../assets/img/dancing/carousel/7.png"></div>
       <div class="choreo-container">
         <h3>Choreography</h3>
         <div class="choreo-box">
           <div class="copy">
-            <h4>untitled_37.txt (2016)</h4>
+            <h4>untitled_37.txt </h4>
+            <h6>(2016)</h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-              dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Choreographed and performed by Emily Hansel<br>
+              Computer program by Michael Fix
+            </p>
+            <p>
+              <i>untitled_37.txt</i> was the culmination of over a year’s worth of 
+              research on the subjectivity of language. Words are not equivalent 
+              to ideas, they simply represent ideas. Words attempt to 
+              accurately portray the abstract in a concrete manner. The research 
+              developed into an exploration of the human need to make the abstract tangible.
+            </p>
+            <p>
+              <i>untitled_37.txt</i> premiered on April 27, 2016 at the 
+              University of South Florida. This piece was the fruit of Emily’s 
+              <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a> 
+              for the Honors College at USF.
+              
             </p>
           </div><img class="visual" src="../assets/img/choreo/untitled37.png" alt="Untitled_37.txt">
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>No Reason (2015)</h4>
-            <p>A work in progress, set to premiere in December, 2015. A piece in which there is a reason for everything.</p>
+            <h4>No Reason </h4>
+            <h6>(2015)</h6>
+            <p>
+              Choreographed by Emily Hansel for five dancers<br>
+              Music by Ratatat
+            </p>
+            <p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p>
+            <p>
+              <i>No Reason</i> premiered at the University of South Florida’s 
+              Theatre One in December 2015.  It was later selected to be presented 
+              at the Southeast ACDA Conference in March 2016. 
+              
+            </p>
           </div><img class="visual" src="../assets/img/choreo/noreason.png" alt="No Reason">
         </div>
         <div class="choreo-box">
           <div class="copy"> 
-            <h4>Vertical Words (2015)</h4>
+            <h4>Vertical Words </h4>
+            <h6>(2015)</h6>
             <p>Choreographed and performed by Emily Hansel at Micadanses in Paris.</p>
             <p>
               <i>Vertical Words</i> is an attempt to prove that the perception of meaning is 
@@ -65,11 +88,12 @@
               choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Not Empty (2015)</h4>
+            <h4>Not Empty </h4>
+            <h6>(2015)</h6>
             <p>Choreographed, performed, and directed by Emily Hansel.</p>
             <p>
               This film is a response to a performance of Angelin Preljocaj's "Empty Moves" 
@@ -90,11 +114,12 @@
               signifies something. The attempt to remove purpose is a purpose itself.
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Insatiable (2015)</h4>
+            <h4>Insatiable </h4>
+            <h6>(2015)</h6>
             <p>Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.</p>
             <p>
               Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration 
@@ -109,15 +134,16 @@
               of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Scream (2014)</h4>
+            <h4>Scream </h4>
+            <h6>(2014)</h6>
             <p>
-              <b>Choreographed</b> by Emily Hansel.<br/>
-              <b>Performed</b> by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
-              <b>Music</b> by Philip Glass and Yo-Yo Ma.<br/>
+              Choreographed by Emily Hansel.<br>
+              Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
+              Music by Philip Glass and Yo-Yo Ma.<br>
             </p>
             <p>Inspired by Edvard Munch's "The Scream."</p>
           </div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream">
