--- a/photo/index.html
+++ b/photo/index.html
@@ -28,9 +28,8 @@
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <input type="hidden" name="_next" value="#submitted">
         <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input tabindex="4" type="submit" value="Send">
+        <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="media">
@@ -39,7 +38,7 @@
       <div class="media-container photo-container">       
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
-        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="1" height="200px"><img src="../assets/img/dancing/carousel/2.png" data-caption="2" height="200px"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="3" height="200px"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="4" height="200px"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="5" height="200px"><img src="../assets/img/dancing/carousel/6.png" data-caption="6" height="200px"><img src="../assets/img/dancing/carousel/7.png" data-caption="7" height="200px"><img src="../assets/img/dancing/carousel/8.png" data-caption="8" height="200px"><img src="../assets/img/dancing/carousel/9.png" data-caption="9" height="200px"><img src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px"><img src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px"><img src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px"><img src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px"><img src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px"><img src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px"></div>
+        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="2016&lt;br&gt;Photograph by Jason Lam" height="200px"><img src="../assets/img/dancing/carousel/2.jpg" data-caption="&lt;i&gt;Threshold&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photogrpah by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;br&gt;2014&lt;br&gt;Choreography by Carl Flink&lt;br&gt;Photograph by Tiffany Schrepferman" height="200px"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Robert Moses&lt;br&gt;Photograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Paula Nunez&lt;br&gt;Photograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/6.jpg" data-caption="&lt;i&gt;If this continues…&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alyssa Marchand&lt;br&gt;Photograph by Candace Kaw" height="200px"><img src="../assets/img/dancing/carousel/7.jpg" data-caption="&lt;i&gt;KOTO&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alonzo King&lt;br&gt;Photrograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/8.jpg" data-caption="&lt;i&gt;Picture in a Frame&lt;/i&gt;&lt;br&gt;2013&lt;br&gt;Choreography by Bliss Kohlmyer&lt;br&gt;Photograph by Candace Kaw" height="200px"><img src="../assets/img/dancing/carousel/9.jpg" data-caption="&lt;i&gt;3:00am&lt;/i&gt;&lt;br&gt;2014/2016&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Candace Kaw/Soho Images" height="200px"></div>
         <div class="caption"></div>
       </div>
     </div>
