--- a/statement/index.html
+++ b/statement/index.html
@@ -28,12 +28,12 @@
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <input type="hidden" name="_next" value="#submitted">
         <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input tabindex="4" type="submit" value="Send">
+        <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/3.png"></a></div>
+    <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
       <div class="bio-container">
         <h3>Artist Statement</h3>
@@ -44,11 +44,11 @@
           I have never done before and things that no one has ever done before. 
           I admire people who can change my mind and I enjoy having my mind changed 
           because it indicates that I have learned something. I admire art that dissatisfies 
-          or irritates its audiences because great art has the capacity to do more than simply please all people.
+          or irritates its audiences because great art has the capacity to <i>do</i> more than simply please all people.
         </p>
         <p>
           I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers 
-          who can simply be and do during performance rather than those who simulate or put on anything 
+          who can simply <i>be</i> and <i>do</i> during performance rather than those who simulate or put on anything 
           artificial. In order to portray an emotion or a sensation, I enter a scenario in which I truly 
           feel the emotion or sensation. Instead of pretending to feel something, I am able to actually 
           experience it and whatever movement results is therefore entirely genuine.
@@ -60,11 +60,11 @@
           Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.
         </p>
         <p>
-          I create work in order to share my ideas with other people. I do not aim to please or to displease 
-          my audiences; I want merely to expose them to my ideas and be a witness to their reactions. 
+          I create work in order to share my ideas with other people. I <i>do</i> not aim to please or to displease 
+          my audiences; I want merely to expose them to my ideas and <i>be</i> a witness to their reactions. 
           I strive to interact with audiences through my work. However, I often find it difficult to 
           communicate ideas about my choreography via spoken or written language. Dance is capable of 
-          expressing different things than words can, and I do not attempt to impose the confines of 
+          expressing different things than words can, and I <i>do</i> not attempt to impose the confines of 
           language upon dance. Thus, I usually let my work speak for itself.
         </p>
       </div>
