--- a/video/index.html
+++ b/video/index.html
@@ -30,9 +30,8 @@
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <input type="hidden" name="_next" value="#submitted">
         <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input tabindex="4" type="submit" value="Send">
+        <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="media">
