--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <input type="hidden" name="_next" value="#submitted">
         <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input tabindex="4" type="submit" value="Send">
+        <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="body-container">
@@ -52,8 +51,8 @@
         </div>
         <div class="menu-item"> <span class="menu-button"> media</span>
           <ul class="sub-menu"> 
-            <li> <a class="site-link" href="/video" alt="video">video</a></li>
             <li> <a class="site-link" href="/photo" alt="photo">photo</a></li>
+            <li> <a class="site-link" href="/video" alt="video">video</a></li>
           </ul>
         </div>
         <div class="menu-item"> <span class="menu-button contact">contact </span></div>
