--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="contact-form"><span>x</span>
-      <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
+      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
