--- a/photo/index.html
+++ b/photo/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="contact-form"><span>x</span>
-      <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
+      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
@@ -38,10 +38,18 @@
       <div class="media-container photo-container">       
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
-        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="2016&lt;br&gt;Photograph by Jason Lam" height="200px"><img src="../assets/img/dancing/carousel/2.jpg" data-caption="&lt;i&gt;Threshold&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photogrpah by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;br&gt;2014&lt;br&gt;Choreography by Carl Flink&lt;br&gt;Photograph by Tiffany Schrepferman" height="200px"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Robert Moses&lt;br&gt;Photograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Paula Nunez&lt;br&gt;Photograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/6.jpg" data-caption="&lt;i&gt;If this continues…&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alyssa Marchand&lt;br&gt;Photograph by Candace Kaw" height="200px"><img src="../assets/img/dancing/carousel/7.jpg" data-caption="&lt;i&gt;KOTO&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alonzo King&lt;br&gt;Photrograph by Kyle Scharf" height="200px"><img src="../assets/img/dancing/carousel/8.jpg" data-caption="&lt;i&gt;Picture in a Frame&lt;/i&gt;&lt;br&gt;2013&lt;br&gt;Choreography by Bliss Kohlmyer&lt;br&gt;Photograph by Candace Kaw" height="200px"><img src="../assets/img/dancing/carousel/9.jpg" data-caption="&lt;i&gt;3:00am&lt;/i&gt;&lt;br&gt;2014/2016&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Candace Kaw/Soho Images" height="200px"></div>
+        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" data-caption="2016&lt;br&gt;Photograph by Jason Lam"><img src="../assets/img/dancing/carousel/2.jpg" data-caption="&lt;i&gt;Threshold&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photogrpah by Kyle Scharf"><img src="../assets/img/dancing/carousel/3.jpg" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;br&gt;2014&lt;br&gt;Choreography by Carl Flink&lt;br&gt;Photograph by Tiffany Schrepferman"><img src="../assets/img/dancing/carousel/4.jpg" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Robert Moses&lt;br&gt;Photograph by Kyle Scharf"><img src="../assets/img/dancing/carousel/5.jpg" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Paula Nunez&lt;br&gt;Photograph by Kyle Scharf"><img src="../assets/img/dancing/carousel/6.jpg" data-caption="&lt;i&gt;If this continues…&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alyssa Marchand&lt;br&gt;Photograph by Candace Kaw"><img src="../assets/img/dancing/carousel/7.jpg" data-caption="&lt;i&gt;KOTO&lt;/i&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alonzo King&lt;br&gt;Photrograph by Kyle Scharf"><img src="../assets/img/dancing/carousel/8.jpg" data-caption="&lt;i&gt;Picture in a Frame&lt;/i&gt;&lt;br&gt;2013&lt;br&gt;Choreography by Bliss Kohlmyer&lt;br&gt;Photograph by Candace Kaw"><img src="../assets/img/dancing/carousel/9.jpg" data-caption="&lt;i&gt;3:00am&lt;/i&gt;&lt;br&gt;2014/2016&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Candace Kaw/Soho Images"></div>
         <div class="caption"></div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83432320-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script src="/assets/js/jquery.js"></script>
     <script src="/assets/js/index.js"></script>
     <script src="../assets/js/jquery.js"></script>
