move h3 headers to h1

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/assets/img/favicon2.ico">
@@ -35,7 +36,7 @@
     <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
     <div class="choreo">
       <div class="choreo-container">
-        <h3>Choreography</h3>
+        <h1>Choreography</h1>
         <div class="choreo-box">
           <div class="copy">
             <h4>untitled_37.txt </h4>
