--- a/statement/index.html
+++ b/statement/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/assets/img/favicon2.ico">
@@ -36,7 +37,7 @@
     <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
       <div class="bio-container">
-        <h3>Artist Statement</h3>
+        <h1>Artist Statement</h1>
         <p>
           I respect art that challenges. I appreciate when choreographers challenge their dancers, peers, 
           and audiences. I work to challenge myself and to challenge existing paradigms – 
