--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/assets/img/favicon2.ico">
