--- a/video/index.html
+++ b/video/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/assets/img/favicon2.ico">
@@ -36,7 +37,7 @@
     </div>
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div>
-      <h3 id="photo">Video</h3>
+      <h1 id="photo">Video</h1>
       <div class="media-container video-container">
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
