use static block elements for bio, choreo, and statement, and add credits to Michael Fix and Jason Lam on those pages

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -150,6 +150,10 @@
           </div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream">
         </div>
       </div>
+      <p class="credits">
+        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
+        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
+      </p>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
