--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="dancing-image"></div>
       </ul>
     </div>
-    <div class="load-images"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div>
+    <div class="load-images" style="display: none"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
