--- a/statement/index.html
+++ b/statement/index.html
@@ -69,6 +69,10 @@
           language upon dance. Thus, I usually let my work speak for itself.
         </p>
       </div>
+      <p class="credits">
+        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
+        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
+      </p>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
