add controls to videos

--- a/video/index.html
+++ b/video/index.html
@@ -46,13 +46,13 @@
             <iframe src="https://player.vimeo.com/video/151188661?title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
           <div class="card">
-            <iframe src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;ampshowinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="card">
-            <iframe src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="card">
-            <iframe src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="caption"></div>
