--- a/choreography/index.html
+++ b/choreography/index.html
@@ -89,7 +89,7 @@
               choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
@@ -115,7 +115,7 @@
               signifies something. The attempt to remove purpose is a purpose itself.
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
@@ -135,7 +135,7 @@
               of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
             </p>
           </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;controls=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
