--- a/statement/index.html
+++ b/statement/index.html
@@ -45,7 +45,7 @@
           I have never done before and things that no one has ever done before. 
           I admire people who can change my mind and I enjoy having my mind changed 
           because it indicates that I have learned something. I admire art that dissatisfies 
-          or irritates its audiences because great art has the capacity to <i>do</i> more than simply please all people.
+          or irritates its audiences because great art has the capacity to do more than simply please all people.
         </p>
         <p>
           I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers 
@@ -61,11 +61,11 @@
           Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.
         </p>
         <p>
-          I create work in order to share my ideas with other people. I <i>do</i> not aim to please or to displease 
-          my audiences; I want merely to expose them to my ideas and <i>be</i> a witness to their reactions. 
+          I create work in order to share my ideas with other people. I do not aim to please or to displease 
+          my audiences; I want merely to expose them to my ideas and be a witness to their reactions. 
           I strive to interact with audiences through my work. However, I often find it difficult to 
           communicate ideas about my choreography via spoken or written language. Dance is capable of 
-          expressing different things than words can, and I <i>do</i> not attempt to impose the confines of 
+          expressing different things than words can, and I do not attempt to impose the confines of 
           language upon dance. Thus, I usually let my work speak for itself.
         </p>
       </div>
