Update videos to new links

--- a/video/index.html
+++ b/video/index.html
@@ -42,17 +42,20 @@
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
         <div class="carousel">
-          <div class="card">
-            <iframe src="https://player.vimeo.com/video/151188661?title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <div class="card" data-caption="untitled_37.txt">
+            <iframe src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card">
-            <iframe src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;ampshowinfo=0" frameborder="0" allowfullscreen></iframe>
+          <div class="card" data-caption="Cause Redux">
+            <iframe src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card">
-            <iframe src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <div class="card" data-caption="Unkindness of Ravens">
+            <iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card">
-            <iframe src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <div class="card" data-caption="Modern/Contemporary Excerpts">
+            <iframe src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="Ballet Excerpts">
+            <iframe src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="caption"></div>
