--- a/video/index.html
+++ b/video/index.html
@@ -42,20 +42,20 @@
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
         <div class="carousel">
-          <div class="card" data-caption="untitled_37.txt">
-            <iframe src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="card" data-caption="Cause Redux">
+          <div class="card" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Restaged by Bliss Kohlmyer&lt;br&gt;Choreographed by Robert Moses&lt;/small">
             <iframe src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card" data-caption="Unkindness of Ravens">
+          <div class="card" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreographed by Carl Flink&lt;/small&gt;">
             <iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card" data-caption="Modern/Contemporary Excerpts">
-            <iframe src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <div class="card" data-caption="&lt;i&gt;untitled_37.txt&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed and performed by Emily Hansel&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="card" data-caption="Ballet Excerpts">
+          <div class="card" data-caption="Ballet Performance Samples&lt;small&gt;&lt;br&gt;2014-2016&lt;/small&gt;">
             <iframe src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="Additional Modern/Contemporary Performance Samples&lt;small&gt;&lt;br&gt;2013-2015&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="caption"></div>
